# Castiel

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  package-lock.json
.github/workflows/: build_and_release.yml
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.ts  main.tsx
frontend/src/api/: config.ts  discovery.ts  media.ts  status.ts
frontend/src/components/: ChromecastCard.tsx  MediaSettingsModal.tsx  Navbar.tsx
frontend/src/components/DeviceCard/: DeviceCard.tsx  DeviceCardButtonTray.tsx  DeviceCardButtons.tsx  DeviceInfoModal.tsx  DeviceMediaInfo.tsx  StartMediaModal.tsx
frontend/src/contexts/: deviceStatusContext.ts
frontend/src/hooks/: useChromecastDiscovery.ts  useChromecastStatus.ts  useDeviceDiscovery.ts  useDeviceStatus.ts
frontend/src/pages/: About.tsx  Home.tsx
frontend/src/providers/: DeviceStatusProvider.tsx
src/: cast_test.rs  config.rs  discovery.rs  errors.rs  logging.rs  main.rs  media.rs  routes.rs
src/devices/: app_ids.rs  discovery.rs  media.rs  mod.rs  status.rs
static/: index.html
