[package]
name = "boardcast"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
flume = "0.11.1"
mdns-sd = "0.13.9"
rust_cast = "0.19.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
config = "0.15.11"
toml = "0.8.22"
tracing = "0.1.41"
